--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cartridge/connector": "^0.7.13",
+    "@cartridge/controller": "^0.7.13",
+    "@metamask/sdk": "^0.33.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@solana/web3.js": "^1.98.2",
+    "@starknet-react/chains": "^3.1.3",
+    "@starknet-react/core": "^3.7.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "starknet": "^6.24.1",
+    "starknetkit": "^2.10.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
